2005-03-22  Erik Hjortsberg  <erik@katastrof.nu>

	* removed pig and squirrel pack
	* added fence bblocks and a sty blueprint
	* fixed the way the BluePrint calculates the orientations of buildin blocks

2003-05-21 Miguel Guzman (Aglanor)

	* The merchant now makes a sound when he speaks.
	He'll yell "get your pig here!" in a strangely spanish accent.

2005-03-20  Erik Hjortsberg  <erik@katastrof.nu>

	* autopackage, hmm... let's see where this leads
	* added ember icon and desktop file
	* bumped version to 0.3.0
	* added make_dist_media.sh, for autogenerating the media dir. run it in the root dir. It requires a "media" dir directly under the root dir.

2005-03-20  Erik Hjortsberg  <erik@katastrof.nu>

	* EmberOgre.h: added convenience getRootSceneNode
	* EmberOgre.h: added and cleaned up comments
	* EmberOgre.cpp: setupJesus now loads all blockspecs, building blocks, modeldefinitions and blueprints (both global and user)
	* Jesus added methods for saving blueprints, these will be saved to ~/.ember/carpenter/blueprints/
	* Jesus now loads and holds all blueprints
	* BluePrint.cpp, BluePrint.h: make BuildingBlockBinding all const
	* made sure all blueprints have names
	* JesusEdit: added ability to save and load blueprints. This is very temporary and should use a better method and GUI.
	* MakeEntityWidget: added null checks
	* Widget.h: added comment

2005-03-20 Miguel Guzman (Aglanor)

	* added back Sound Service and reenabled the playsound command
	(type /playsound for a test)

2005-03-19  Miguel Guzman (Aglanor)

	* added name of speaking entity to chat widget line.

2005-03-19  Erik Hjortsberg  <erik@katastrof.nu>

	* removed references to non-existant meshes

2005-03-19  Erik Hjortsberg  <erik@katastrof.nu>

	* added more comments

2005-03-19  Erik Hjortsberg  <erik@katastrof.nu>

	* added Name accessor to BluePrint, now all blueprint must have names